# pcb-ai-inspector

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CONTRIBUTING.md  Makefile  README.md  build.spec  pyproject.toml  requirements.txt
.github/workflows/: release.yml
docs/: DEPLOYMENT.md  DEVELOPMENT.md  MODEL_TRAINING.md  PCB工业场景功能与UI规划方案.md  PCB缺陷AI检测软件 - 产品需求文档（PRD）.md  TROUBLESHOOTING.md
src/pcb_ai_inspector/: __init__.py  __main__.py
src/pcb_ai_inspector/core/: AGENTS.md  __init__.py  activation.py  defect_types.py  history.py  settings.py
src/pcb_ai_inspector/models/: AGENTS.md  __init__.py  detector.py
src/pcb_ai_inspector/reports/: AGENTS.md  __init__.py  report_generator.py
src/pcb_ai_inspector/tests/: AGENTS.md  test_device.py  test_exception_injection.py  test_preprocessor.py  test_preprocessor_logic.py  test_ui_mock.py  test_unit_core.py
src/pcb_ai_inspector/ui/: AGENTS.md  __init__.py  batch_handler.py  defect_list.py  defect_overlay.py  detection_pipeline.py  detection_result_handler.py  history_dialog.py  image_viewer.py  main_window.py  manual_panel.py  realtime_panel.py  report_preview_dialog.py  settings_dialog.py  statistics_panel.py
src/pcb_ai_inspector/utils/: AGENTS.md  __init__.py  alarm_controller.py  camera_capture.py  device.py  image_tiler.py  industrial_camera.py  logging_config.py  multi_scale.py  shift_manager.py
