[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pcb-ai-inspector"
version = "1.0.0"
description = "PCB Defect AI Detection Software - Offline YOLO11 based inspection tool"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "AGPL-3.0"}
authors = [
    {name = "PCB AI Team"}
]
keywords = ["pcb", "yolo", "defect-detection", "ai", "aoi"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU Affero General Public License v3 (AGPLv3)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Operating System :: Microsoft :: Windows",
]

dependencies = [
    "ultralytics>=8.0.0",
    "torch>=2.0.0",
    "onnxruntime>=1.16.0",
    "numpy<2",
    "PyQt6>=6.6.0",
    "opencv-python>=4.8.0",
    "Pillow>=10.0.0",
    "reportlab>=4.0.0",
    "openpyxl>=3.1.0",
    "PyYAML>=6.0",
    "loguru>=0.7.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
    "mypy>=1.5.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 100
target-version = ["py311"]
include = '\.pyi?$'
exclude = '''
/(
    \.git
    | \.venv
    | \.mypy_cache
    | build
    | dist
    | __pycache__
)/
'''

[tool.isort]
profile = "black"
line_length = 100
skip = [".git", ".venv", "build", "dist"]
force_single_line = false
balanced_wrapping = true

[tool.flake8]
max-line-length = 100
extend-ignore = ["E203", "W503"]
exclude = [
    ".git",
    ".venv",
    "build",
    "dist",
    "__pycache__",
    ".mypy_cache",
]
per-file-ignores = [
    "__init__.py:F401",
]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
strict_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
show_error_codes = true
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["torch.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["cv2.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["onnxruntime.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["src/pcb_ai_inspector/tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --cov=pcb_ai_inspector --cov-report=term-missing"
